[project]
name = "pei-nwdaf-encryptor"
version = "0.1.0"
description = "NWDAF Encryption Package - DH key exchange and AES-256-GCM encryption"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.5",
    "httpx>=0.23.2",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["encryptor"]
